# FraudShield

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  uv.toml
.github/workflows/: ci.yml
airflow/: airflow.cfg
data/models/: evaluation_report_rf.csv  evaluation_report_xg.csv  model_persistence.py  preprocessed_data.npy  random_forest.pkl  test_data.npy  xgboost.pkl
data/processed/: data_preprocessing.py  fraud_data.db  ingested_data.csv
data/raw/: data_ingestion.py  synthetic_fraud_data.csv  synthetic_fraud_data.py
docs/: cpp_modules.md  data_dictionary.md  migration_guide.md  model_architecture.md  project_overview.md  quick_start.md  security_and_quality.md  setup_instructions.md  sql_schema.md
infra/: docker-compose.yml
notebooks/: 01_fraudshield_pipeline_tutorial.ipynb  exploratory_data_analysis.ipynb  model_experimentation.ipynb
src/data_cleaning/: data_cleaning.cpp
src/data_cleaning/tests/: data_cleaning_test.cpp
src/data_ingestion/: data_ingestion.py
src/data_ingestion/tests/: test_data_ingestion.py
src/data_pipeline/airflow_dags/: fraud_detection_dag.py
src/data_pipeline/tests/: test_fraud_detection_dag.py
src/data_preprocessing/: data_preprocessing.py
src/feature_engineering/: feature_engineering.cpp
src/feature_engineering/tests/: feature_engineering_test.cpp
src/fraudshield/: __init__.py
src/fraudshield/data_cleaning/: __init__.py  cpp_wrapper.py  data_cleaning.cpp
src/fraudshield/data_ingestion/: __init__.py  data_ingestion.py
src/fraudshield/data_pipeline/: __init__.py  (+1 more)
src/model_evaluation/: evaluation.py
src/model_training/: model_persistence.py  random_forest.py  train_models.py  xgboost_utils.py
src/sql/: data_retrieval.py
tests/cpp/: data_cleaning_test.cpp  feature_engineering_test.cpp
tests/integration_tests/: test_pipeline.py
tests/unit_tests/: test_data_ingestion.py  test_data_preprocessing.py  test_data_retrieval.py  test_evaluation.py  test_fraud_detection_dag.py  test_model_persistence.py  test_transaction_features.py
(+27 files in other folders)
